fix alignment of modal

--- a/src/styles/cart-modal.css
+++ b/src/styles/cart-modal.css
@@ -5,10 +5,13 @@
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   border-radius: 10px;
   position: fixed;
-  top: 20px;
-  left: 20px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
   width: 90%;
-  max-width: 1000px;
+  max-width: 920px;
   min-width: 610px;
   height: 90vh;
   overflow-y: auto;
